# telegram_drive

./: .gitignore  Cargo.toml
configs/: tdlib_params.json
src/: cloud.rs  cloud_backend.rs  lib.rs  telegram_backend.rs  virtual_file_system.rs
telegram_drive_core/: Cargo.toml  tdjson.lib
telegram_drive_core/src/: authentication.rs  error.rs  lib.rs  tdjson.rs
telegram_drive_file/: Cargo.toml
telegram_drive_file/src/: file_assembly.rs  file_separation.rs  lib.rs
