[package]
name = "telegram_drive"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "telegram_drive_core",
    "telegram_drive_file"
]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name="main"
path = "src/bin/main.rs"

[dependencies]
futures = "0.3"
async-trait = "0.1.68"
tokio = { version = "1.27.0", features = ["full"] }

telegram_drive_file = { path = "telegram_drive_file" }
telegram_drive_core = { path = "telegram_drive_core" }
serde_json = { version = "1.0.95" }
serde = { version = "1.0.159", features = ["serde_derive", "derive"] }
md5 = { version = "0.7.0" }
uuid = { version = "1.3.0", features = ["v4"] }